--- a/public/index.html
+++ b/public/index.html
@@ -4,77 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Monitoring Dashboard</title>
-    <style>
-      /* Minimal, neutral styling for functional table layout */
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: system-ui, -apple-system, "Segoe UI", Roboto,
-          "Helvetica Neue", Arial;
-        color: #000;
-        background: #fff;
-      }
-      .wrap {
-        max-width: 1100px;
-        margin: 24px auto;
-        padding: 16px;
-      }
-      header {
-        margin-bottom: 12px;
-      }
-      h1 {
-        margin: 0 0 4px 0;
-        font-size: 20px;
-      }
-      p {
-        margin: 0;
-        font-size: 13px;
-        color: #222;
-      }
-
-      .card {
-        border: 1px solid #ccc;
-        border-radius: 6px;
-        overflow: hidden;
-      }
-      .table-container {
-        width: 100%;
-        overflow-x: auto;
-      }
-      table {
-        width: 100%;
-        border-collapse: collapse;
-      }
-      thead th {
-        text-align: left;
-        padding: 10px;
-        border-bottom: 1px solid #ccc;
-        font-weight: 600;
-      }
-      tbody td {
-        padding: 10px;
-        border-bottom: 1px solid #e6e6e6;
-      }
-      tr:hover td {
-        background: #fafafa;
-      }
-      .center {
-        text-align: center;
-      }
-      .mono {
-        font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, "Roboto Mono",
-          monospace;
-      }
-      footer {
-        padding: 10px;
-        font-size: 12px;
-        color: #333;
-        border-top: 1px solid #eee;
-      }
-
-      /* No color semantics applied. Keep only structural classes. */
-    </style>
+    <link rel="stylesheet" href="public/style.css" />
   </head>
   <body>
     <div class="wrap">
@@ -82,6 +12,11 @@
         <h1>Monitoring Dashboard</h1>
         <p>Live sensor data from the server room</p>
       </header>
+
+      <div class="refresh-info">
+        Refreshing every 5 seconds. Last update:
+        <span id="last-update">Never</span>
+      </div>
 
       <div class="card">
         <div class="table-container">
@@ -104,10 +39,6 @@
             </tbody>
           </table>
         </div>
-        <footer>
-          Refreshing every 5 seconds. Last update:
-          <span id="last-update">Never</span>
-        </footer>
       </div>
     </div>
 
